--- a/.github/workflows/auto-merge-schedule.yml
+++ b/.github/workflows/auto-merge-schedule.yml
@@ -3,11 +3,12 @@ name: Merge Schedule
 on:
   pull_request:
     branches:
-      - 'staging'
+      - 'main'
   schedule:
     # https://crontab.guru/every-hour
     - cron: '*/5 * * * *'
-
+permissions:
+  pull-requests: write
 jobs:
   merge_schedule:
     runs-on: ubuntu-latest
@@ -19,8 +20,6 @@ jobs:
           # Require all pull request statuses to be successful before
           # merging. Default is `false`.
           require_statuses_success: 'true'
-          # Label to apply to the pull request if the merge fails. Default is
-          # `automerge-fail`.
           automerge_fail_label: 'merge-schedule-failed'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
