--- a/.github/workflows/auto-merge-schedule.yml
+++ b/.github/workflows/auto-merge-schedule.yml
@@ -3,7 +3,7 @@ name: Merge Schedule
 on:
   pull_request:
     branches:
-      - 'staging'
+      - 'main'
   schedule:
     # https://crontab.guru/every-hour
     - cron: '*/5 * * * *'
