--- a/.github/workflows/auto-merge-schedule.yml
+++ b/.github/workflows/auto-merge-schedule.yml
@@ -7,7 +7,8 @@ on:
   schedule:
     # https://crontab.guru/every-hour
     - cron: '*/5 * * * *'
-
+permissions:
+  pull-requests: write
 jobs:
   merge_schedule:
     runs-on: ubuntu-latest
