new workflow for merging

--- a/.github/workflows/auto-create-PR-dev.yml
+++ b/.github/workflows/auto-create-PR-dev.yml
@@ -6,7 +6,7 @@ on:
 permissions:
   pull-requests: write
 jobs:
-  createPR:
+  updateFork:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -14,7 +14,7 @@ jobs:
         run: |
           gh pr create -B main -H development \
             --title 'Merge Dev into Staging' \
-            --body '/schedule' \
+            --body 'Automated PR that will be merged Mondays and Thursdays at 7pm EST.' \
             --label 'automatic'
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
