--- a/.github/workflows/auto-merge-schedule.yml
+++ b/.github/workflows/auto-merge-schedule.yml
@@ -2,8 +2,7 @@ name: Merge Schedule
 
 on:
   pull_request:
-    branches:
-      - 'main'
+    types: labeled
   schedule:
     # https://crontab.guru/every-hour
     - cron: '*/5 * * * *'
@@ -12,14 +11,10 @@ permissions:
 jobs:
   merge_schedule:
     runs-on: ubuntu-latest
+    if: ${{ github.event.label.name == 'automatic' }}
     steps:
-      - uses: gr2m/merge-schedule-action@v2
-        with:
-          # Time zone to use. Default is UTC.
-          time_zone: 'America/New_York'
-          # Require all pull request statuses to be successful before
-          # merging. Default is `false`.
-          require_statuses_success: 'true'
-          automerge_fail_label: 'merge-schedule-failed'
+      - name: create pull request
+        run: |
+          gh pr merge --auto -b 'Automatically merged by GitHub'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
