--- a/.github/workflows/auto-create-PR-dev.yml
+++ b/.github/workflows/auto-create-PR-dev.yml
@@ -6,7 +6,7 @@ on:
 permissions:
   pull-requests: write
 jobs:
-  updateFork:
+  createPR:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
