--- a/.github/workflows/auto-merge-schedule.yml
+++ b/.github/workflows/auto-merge-schedule.yml
@@ -1,5 +1,8 @@
 name: Merge Pull Request
+
 on:
+  pull_request:
+    types: labeled
   schedule:
     # https://crontab.guru/every-hour
     - cron: '*/5 * * * *'
@@ -8,7 +11,7 @@ permissions:
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-    if: ${{ github.event.label.name == 'automatic' }}
+    if: contains(github.event.issue.labels.*.name, 'automatic')
     steps:
       - name: Merge Pull Request
         run: |
