--- a/.github/workflows/auto-merge-schedule.yml
+++ b/.github/workflows/auto-merge-schedule.yml
@@ -1,26 +1,20 @@
-name: Merge Schedule
-
+name: Merge Pull Request
 on:
-  pull_request:
-    branches:
-      - 'staging'
   schedule:
     # https://crontab.guru/every-hour
     - cron: '*/5 * * * *'
-
+permissions:
+  pull-requests: write
 jobs:
-  merge_schedule:
+  auto-merge:
     runs-on: ubuntu-latest
     steps:
-      - uses: gr2m/merge-schedule-action@v2
+      - uses: actions/checkout@v4
         with:
-          # Time zone to use. Default is UTC.
-          time_zone: 'America/New_York'
-          # Require all pull request statuses to be successful before
-          # merging. Default is `false`.
-          require_statuses_success: 'true'
-          # Label to apply to the pull request if the merge fails. Default is
-          # `automerge-fail`.
-          automerge_fail_label: 'merge-schedule-failed'
+          ref: development
+      - name: Merge Pull Request
+        run: |
+          gh pr list -l automatic --json &&
+          gh pr merge --auto -b 'Automatically merged by our GitHub Action'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
