--- a/.github/workflows/auto-merge-schedule.yml
+++ b/.github/workflows/auto-merge-schedule.yml
@@ -7,7 +7,7 @@ permissions:
   pull-requests: write
   contents: write
 jobs:
-  auto-merge:
+  mergePR:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
