--- a/.github/workflows/auto-merge-schedule.yml
+++ b/.github/workflows/auto-merge-schedule.yml
@@ -5,7 +5,7 @@ on:
     - cron: '*/5 * * * *'
 permissions: write-all
 jobs:
-  auto-merge:
+  mergePR:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
